--- a/Relatorio/Interligacao_Sensores_Actuadores/Interligacao_sensores_e_actuadores.tex
+++ b/Relatorio/Interligacao_Sensores_Actuadores/Interligacao_sensores_e_actuadores.tex
@@ -4,7 +4,7 @@
 \renewcommand\thesection{\arabic{section}}
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
 \renewcommand\thesubsubsection{\thesection.\thesubsection.\arabic{subsubsection}}
-\include{./include/CAPA}%titlepage
+\include{./include/CAPAREPORT}%titlepage
 %\tableofcontents
 %\appendix
 \pagestyle{plain}%plain headings empty
