--- a/Relatorio/sistema_minimo/input/EQUACAO.tex
+++ b/Relatorio/sistema_minimo/input/EQUACAO.tex
@@ -1,5 +1,8 @@
-\part*{Equa\c{c}\~{o}es} \label{eq}
+%\part*{Equa\c{c}\~{o}es} \label{eq}
 %
+{\huge Definições} \\
+
+\begin{comment}
 \begin{flushleft}
 {\bf Corrente Continua Condi\c{c}\~{o}es \index{Condi\c{c}\~{o}es} iniciais \index{iniciais} nulas \index{nulas}.}\par
 \end{flushleft}
@@ -159,6 +162,7 @@ O valor de N representa os valores do divisor de frequ\^{e}ncia ou prescaler (1,
 	\begin{equation}
 \boxed{ADC=\frac{V_{IN}.1024}{V_{REF}}}
 	\end{equation} \par
+\end{comment}]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{definition}
 Capacit\^{a}ncia
