relatorio_fix_2_nomesdocentes

--- a/Relatorio/Interligacao_Sensores_Actuadores/include/CAPAREPORT.tex
+++ b/Relatorio/Interligacao_Sensores_Actuadores/include/CAPAREPORT.tex
@@ -21,7 +21,7 @@
 \begin{minipage}{0.4\linewidth}
 \centering
 \textbf{Docente/Orientador} \\
-Abel António de Azevedo Ferreira, \textit{abe} \\
+Lino Manuel Baptista Figueiredo, \textit{lbf} \\
 \textbf{Unidade Curricular} \\
 LABSIS \\
 \end{minipage}
