--- a/Relatorio/sistema_minimo/Sistema_Minimo.tex
+++ b/Relatorio/sistema_minimo/Sistema_Minimo.tex
@@ -32,7 +32,7 @@
 
 	\section{Arquitetura}
 	O {\bf CPU} (Unidade Central de Processamento) dos microcontroldores da Atmel de 8 e 32 bits s\~{a}o baseados na arquitetura avan\c{c}ada de {\bf Harvard} na qual esta concebido para baixos consumos e performance. \par
-	Este tipo de arquitetura tem dois  busses (barramentos) um dedicado a leitura das instru\c{c}\~{o}es a executar e outra para escrita e leitura de data (informa\c{c}\~{a}o ou dados), isto assegura que uma nova instru\c{c}\~{a}o pode ser executada em cada ciclo de rel\'{o}gio, na qual elimina estados de espera quando n\~{a}o ha instru\c{c}\~{o}es prontas a executar. \par
+	Este tipo de arquitetura tem dois  busses (barramentos) um dedicado a leitura das instruções a executar e outra para escrita e leitura de data (informa\c{c}\~{a}o ou dados), isto assegura que uma nova instru\c{c}\~{a}o pode ser executada em cada ciclo de rel\'{o}gio, na qual elimina estados de espera quando n\~{a}o ha instru\c{c}\~{o}es prontas a executar. \par
 	Nos microcontroladores da AVR os barramentos est\~{a}o configurados de forma a dar prioridade ao barramento das instru\c{c}\~{o}es do CPU acesso a memoria flash enquanto o barramento da CPU de dados tem prioridade de acesso a {\bf SRAM} (Static Random Access Memory). \par
 	O espa\c{c}o de memoria de dados \'{e} dividida em tr\^{e}s, os {\bf GPR} (General Purpose Registers) as {\bf SFRs} (Special Function Registers) ou memoria de I/O e a data SRAM. \par
 	\begin{comment}
