finished_first_report_1

--- a/Relatorio/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
+++ b/Relatorio/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
@@ -1114,7 +1114,9 @@ O assembly \'{e} maquina dependente e de programa\c{c}\~{a}o detalhada muito lig
 O {\bf C} \'{e} mais liberal maquina independente, mas o utilizador n\~{a}o tem controle sobre o mapeamento das vari\'{a}veis na memoria nem na sua compila\c{c}\~{a}o. A linguagem tamb\'{e}m \'{e} consebido com uma estrutura mais l\'{o}gica sendo sua transfer\^{e}ncia para {\bf Flowchart} intuitiva. \par
 Fazendo {\bf Delays} ou {\bf Polling} interrompe o programa ficando a espera, dai as interrup\c{c}\~{o}es s\~{a}o mais \'{u}teis, s\'{o} chamando sua rotina quando necess\'{a}rio. \\
 	
-O dom\'{i}nio de interpreta\c{c}\~{a}o e manipula\c{c}\~{a}o do datasheet em conjunto com seu component cosidero como objetivo priorit\'{a}rio, perceber seus conceitos e modos de funcionamento, interpretar os esquemas electr\'{o}nicos e sua interliga\c{c}\~{a}o com a parte de programa\c{c}\~{a}o, suas defini\c{c}\~{o}es e caracter\'{i}sticas ter uma vis\~{a}o do que \'{e} poss\'{i}vel fazer da combina\c{c}\~{a}o de hardware e software, tendo em conta suas limita\c{c}\~{o}es e virtudes, podemos com esta aprendizagem facilmente nos adaptar a outras arquiteturas e fabricantes, o hardware em principio ser\'{a} igual o modo de o manipular por software o paradigma de aproxima\c{c}\~{a}o poder\'{a} ser diferente mas a eletr\'{o}nica em principio \'{e} universal.
+O dom\'{i}nio de interpreta\c{c}\~{a}o e manipula\c{c}\~{a}o do datasheet em conjunto com seu component cosidero como objetivo priorit\'{a}rio, perceber seus conceitos e modos de funcionamento, interpretar os esquemas electr\'{o}nicos e sua interliga\c{c}\~{a}o com a parte de programa\c{c}\~{a}o, suas defini\c{c}\~{o}es e caracter\'{i}sticas ter uma vis\~{a}o do que \'{e} poss\'{i}vel fazer da combina\c{c}\~{a}o de hardware e software, tendo em conta suas limita\c{c}\~{o}es e virtudes, podemos com esta aprendizagem facilmente nos adaptar a outras arquiteturas e fabricantes, o hardware em principio ser\'{a} igual o modo de o manipular por software o paradigma de aproxima\c{c}\~{a}o poder\'{a} ser diferente mas a eletr\'{o}nica em principio \'{e} universal.\\ \\
+Este trabalho esta publicado no github, link abaixo: \\
+{\bf \textit https://github.com/sergio1020881/LABSIS20202021}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
