--- a/Relatorio/Interligacao_Sensores_Actuadores/include/CAPAREPORT.tex
+++ b/Relatorio/Interligacao_Sensores_Actuadores/include/CAPAREPORT.tex
@@ -21,13 +21,16 @@
 \begin{minipage}{0.4\linewidth}
 \centering
 \textbf{Docente/Orientador} \\
-Lino Manuel Baptista Figueiredo, \textit{lbf} \\
+\begin{flushleft}
+Abel António de Azevedo Ferreira, \textit{abe}\\
+Lino Manuel Baptista Figueiredo, \textit{lbf}\\
+\end{flushleft}
 \textbf{Unidade Curricular} \\
 LABSIS \\
 \end{minipage}
 }
 }
-\date{\rule[180pt]{0pt}{5pt} } %\today
+\date{\rule[180pt]{0pt}{5pt} \today } %\today
 \end{titlepage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{minipage}{\linewidth}
