--- a/Relatorio_1/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
+++ b/Relatorio_1/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
@@ -77,10 +77,10 @@ Para o programar foi ligado uma ficha ISP aos seus respectivos pinos. \\
 \end{figure}\par
 \end{comment}
 %\newpage
-Para Facilitar seu desenvolvimento foi feito o circuito numa placa pre furada, e sua implementa\c{c}\~{a}o podendo ser alimentada diretamente pelo PC através da porta USB.
+Para Facilitar seu desenvolvimento foi feito o circuito numa placa pre furada, e sua implementa\c{c}\~{a}o podendo ser alimentada por uma fonte DC 12Volt por um Jack.
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.05]{./image/Board/DevBoard_1.JPG}
+	\includegraphics[scale=0.085]{./image/Board/DevBoard_1.JPG}
 	%	\caption{Dev Board}
 	%	\label{Dev Board}
 \end{figure}
