--- a/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
+++ b/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
@@ -20,9 +20,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \label{Resumo}
 \begin{abstract}
-\qquad O projeto que se pretende fazer é um sistema de posicionamento de painel fotovoltaico para obter maior rendimento de produção de energia, já que é conhecido que se pode tirar proveito até 35\% de energia a mais dependendo da estação do ano.
+\qquad O projeto que se pretende fazer é um sistema de posicionamento de painel fotovoltaico para obter maior rendimento de produção de energia, já que é conhecido que se pode tirar proveito até 40\% de energia que é dependente na estação do ano. \\
 \\
-\vspace{20cm}\\
+O objetivo é desenvolver um meio de controlo tendo em mente ser um sistema Stand Alone de tamanho considerável, não vai ser concentrado ao redor do painel fotovoltaico em si e suas características ou modos de funcionamento, mas apenas o sistema de Sun Track, também supondo que tem baterias de carga com o intuito que o sistema possa ser autónomo. \\
+\\
+O projeto é apenas académico e de simulação em escala pequena ou de bancada.
+\\
+\vspace{15cm}\\
 \textbf{Palavras Chave:} Sensores, Componentes, Motores
 \end{abstract}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
