--- a/Relatorio_2/Posicionamento_Painel_Solar/bibliography/Bibliography.bib
+++ b/Relatorio_2/Posicionamento_Painel_Solar/bibliography/Bibliography.bib
@@ -1,51 +1,17 @@
 @Book{book_1,
-author = {Stephen W Fardo, Dale R. Patrick},
-ALTeditor = {},
-title = {Electrical Power Systems Technology Third Edition},
-publisher = {CRC Press},
-year = {2008},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTseries = {•},
-OPTaddress = {•},
-OPTedition = {English},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+author = "Stephen W Fardo, Dale R. Patrick",
+title = "Electrical Power Systems Technology Third Edition",
+publisher = "CRC Press",
+year = "2008"
 }
 
 @Book{book_2,
-author = {Mukund R. Patel},
-ALTeditor = {},
-title = {Wind and Solar Power Systems Design, Analysis and Operation Second Edition},
-publisher = {Taylor \& Francis Group LLC},
-year = {2006},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTseries = {•},
-OPTaddress = {•},
-OPTedition = {•},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+author = "Mukund R. Patel",
+title = "Wind and Solar Power Systems Design, Analysis and Operation Second Edition",
+publisher = "Taylor \& Francis Group LLC",
+year = "2006"
 }
 
-Article{article_1,
-author = {},
-ALTeditor = {},
-title = {},
-publisher = {},
-year = {},
-journal = {•},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTseries = {•},
-OPTaddress = {•},
-OPTedition = {•},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+@Article{article_1,
+title = "https://science.nasa.gov/science-news/science-at-nasa/2002/solarcells"
 }
