--- a/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
+++ b/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
@@ -43,7 +43,7 @@ Abaixo esta os tipos conhecidos de possíveis montagens.\\
 \includegraphics[scale=0.6]{./image/Mount_Method.jpg}
 \caption{Tipos de Montagem \cite{book_2}}
 \end{figure}
-Pelo mapa abaixo, podemos determinar os locais mais aptos para aplicar esta tecnologia, Portugal como vemos não é das mais favoravies, também notamos que onde passa a linha de equador é onde podemos tirar maior proveito, ou seja maior {\bf $Kw/m^2$}
+Pelo mapa abaixo, podemos determinar os locais mais aptos para aplicar esta tecnologia, Portugal como vemos não é das mais favoravies, também notamos que onde passa a linha de equador é onde podemos tirar maior proveito, ou seja maior {$\bf KW/m^2$}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.6]{./image/World_Solar_Radiation.jpg}
@@ -53,15 +53,19 @@ Pelo mapa abaixo, podemos determinar os locais mais aptos para aplicar esta tecn
 
 \qquad Os painéis fotovoltaicos tem vários parâmetros que determinam sua eficiência, a temperatura de funcionamento, otimização da carga, sua orientação e até limpeza são alguns pormenores, este estado de arte apenas é uma tentativa de melhor garantir tirar maior proveito da energia coletada pelo meio de orientação.\\
 \\
-\begin{minipage}{0.5\linewidth}
+\fbox{
+\begin{minipage}{0.5\linewidth}\vspace{0pt}
 \begin{figure}[H]
 	\includegraphics[scale=0.6]{./image/Graph/Anualkwh_1.jpg}
 	\caption{Resposta a inclinação}
 \end{figure}
 \end{minipage}
-\begin{minipage}[t]{0.5\linewidth}
+}
+\hspace{0.2cm}
+\begin{minipage}[!t]{0.5\linewidth}
 \flushleft
-Neste gráfico podemos ver um exemplo da diferença entre o rendimento de sistemas sem controlo de orientação, orientação parcial e total.\\
+ Neste gráfico podemos ver um exemplo da diferença entre o rendimento de sistemas sem controlo de orientação, orientação parcial e total.\\
+\vspace{7cm}
 \end{minipage}\\
 \\
 \\
