--- a/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
+++ b/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
@@ -1,14 +1,14 @@
 \input{./input/PREAMBLEREPORT}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 %\bibliographystyle{apacite}
 \bibliographystyle{babplain}
 %\bibliographystyle{bstfilename}
-%%%%%%%%%%%%%%%%%%%%%FIX SECTION NUMBERING IN CASE REPORT%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%FIX SECTION NUMBERING IN CASE REPORT%%%%%%%%%%%%%%%%
 \renewcommand\thesection{\arabic{section}}
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
 \renewcommand\thesubsubsection{\thesection.\thesubsection.\arabic{subsubsection}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{./include/CAPAREPORT}
 \tableofcontents
 \appendix
@@ -17,7 +17,7 @@
 %\numberwithin{page}{section}
 %\renewcommand{\abstractname}{Executive Summary}
 \setlength{\parindent}{0in}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \label{Resumo}
 \begin{abstract}
 \qquad O projeto que se pretende fazer é um sistema de posicionamento de painel fotovoltaico para obter maior rendimento de produção de energia, já que é conhecido que se pode tirar proveito até 40\%. \\
@@ -29,10 +29,9 @@ O projeto é apenas académico e de simulação em escala pequena ou de bancada.
 \vspace{15cm}\\
 \textbf{Palavras Chave:} Sensores, Componentes, Motores
 \end{abstract}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Introdução}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \qquad Os painéis fotovoltaicos é uma tecnologia que transforma energia solar (Luz) em eletricidade DC, a primeira célula fotovoltaica foi criada em 1954 e depois aplicado na industria espacial, a combinação de células em serie e paralelo determina sua diferença de potencial e potencia.\cite{article_1}\\
 \\
 Ao primeiro esta tecnologia foi vista como uma curiosidade e depois como uma possibilidade, após o preço de construção ter diminuído é que começou a entrar no mercado, isto aconteceu a partir dos anos 70, quando se estava a atravessar uma crise energética.\cite{article_1}\\
@@ -49,8 +48,8 @@ Pelo mapa abaixo, podemos determinar os locais mais aptos para aplicar esta tecn
 	\includegraphics[scale=0.6]{./image/World_Solar_Radiation.jpg}
 	\caption{Solar radiation by region of the world \cite{book_2}}
 \end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-
 \qquad Os painéis fotovoltaicos tem vários parâmetros que determinam sua eficiência, a temperatura de funcionamento, otimização da carga, sua orientação e até limpeza são alguns pormenores, este estado de arte apenas é uma tentativa de melhor garantir tirar maior proveito da energia coletada pelo meio de orientação.\\
 \\
 \fbox{
@@ -76,72 +75,26 @@ Existe dois tipos de sistemas de orientação solar:\cite{book_2}
 	\item Sistema de um eixo, este segue o posicionamento do sol durante o dia de Este a Oeste.
 	\item Sistema de dois eixos, o mesmo que de um eixo mais a orientação Norte e Sul que tem  em consideração a influencia de inclinação provocada pelas estações do ano.
 \end{enumerate}
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Estado da Arte}
-\qquad O projeto em causa pertence a disciplina de Laboratório de Sistemas que da continuidade as disciplinas de Sistemas Digitais, sendo o foco processadores, micro-controladores e {\it Fpga´s} (Field programmable arrays). Um Micro-controlador da {\it ATmel} é o que vai ser usado como o cérebro do sistema, o tipo de sistema de orientação vai ser de um eixo, um servo motor para simulação de posicionamento e dois sensores LDR (Light dependent resitor) ligados a uma ponte wheatstone e amplificador de instrumentação para ajusto fino. Um RTC (Real Time Clock) como ferramenta de posicionamento principal, disponível um override manual, sendo seus dados visíveis num LCD (Liquid crystal display), o motor a ser usado se for numa aplicação real seria de corrente continua com íman permanente \cite{book_1} de preferência, com uma caixa redutora e sem fim para que quando estivesse em estado de paragem poder se desligar sem perder sua posição, já que se sabe que a melhor maneira de poupar energia é não a gastar. Como o objetivo é obter o maior rendimento possível pretende-se não desperdiçar, se houve-se meio de não usar energia para seu posicionamento seria o ideal.\\
+\qquad O projeto em causa pertence a disciplina de Laboratório de Sistemas que da continuidade as disciplinas de Sistemas Digitais, sendo o foco processadores, micro-controladores e {\it Fpga´s} (Field programmable arrays). Um Micro-controlador da {\it ATmel} é o que vai ser usado como o cérebro do sistema, o tipo de sistema de orientação vai ser de um eixo, um servo motor para simulação de posicionamento e dois sensores LDR (Light dependent resitor) ligados a uma ponte wheatstone e amplificador de instrumentação para ajusto fino. Um RTC (Real Time Clock) como ferramenta de posicionamento principal, disponível um override manual, sendo seus dados visíveis num LCD (Liquid crystal display). \\
+\\
+O motor a ser usado se for numa aplicação real seria de corrente continua de preferência com íman permanente \cite{book_1} , com uma caixa redutora e sem fim para que quando estivesse em estado de paragem poder se desligar sem perder sua posição, já que se sabe que a melhor maneira de poupar energia é não a gastar. Como o objetivo é obter o maior rendimento possível pretende-se não haver desperdício, se houve-se meio de não usar energia para seu posicionamento seria o ideal.\\
 No mundo das energias renováveis só é justificado sua implementação se for em grande escala pois seus rendimentos são baixos e intermitentes, e melhor ainda se os preços forem atrativos, a não ser que haja algum avanço tecnológico de relevo.\\
 \\
-
-
-A sun-tracking design can increase the energy yield up to 40\% over the year compared to the fixed-array design. Dual-axis tracking is done by two linear actuator motors, which follow the sun within one degree of accuracy (Figure 9.19). During the day, it tracks the sun east to west. At night it turns east to position itself for the next morning’s sun. Old trackers did this after sunset using a small nickel-cadmium battery. The new design eliminates the battery requirement by doing the turning in the weak light of the dusk and/or dawn. The Kelly cosine presented in Table 9.1 is useful in assessing accurately the power available in sunlight incident at extreme angles in the morning or evening. When a dark cloud obscures the sun, the tracker may aim at the next brightest object, which is generally the edge of a cloud. When the cloud is gone, the tracker aims at the sun once again, and so on and so forth. Such sun hunting is eliminated in newer sun trackers. \cite{book_2}\\
-
-\newpage
-
+O sistema de posicionamento pode aumentar a energia acumulada até 40\% durante o ano comparado com os sistemas fixos, durante o dia o painel acompanha a posição dos sol de Este para Oeste e durante a noite regressa a posição Este para o dia seguinte, os sistemas antigos tinham uma bateria para esta operação depois do pôr do sol, os novos modelos já não utilizam bateria mas usam a luz fraca do por do sol para regressar a origem. \cite{book_2} \\
+\\
+Um dos métodos de orientação solar é usar duas células PV em serie com polarização oposta em ângulo de $45^o$ como demonstrado na figura:
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.52]{./image/Sensor_Actuator_Principle.jpg}
 	\caption{Principio de Funcionamento Sensor \cite{book_2}}
 \end{figure}
-
-One method of designing the sun tracker is to use two PV cells mounted on two 45° wedges , and connecting them differentially in series through an actuator motor. When the sun is normal, the currents on both cells are equal to $I_o \cos (45^o)$. \\
-
-As they are connected in series opposition, the net current in the motor is zero, and the array stays put. On the other hand, if the array is not normal to the sun, the sun angles on the two cells are different, giving two different currents as follows: \\
-$I_1 = I_o \cos(45 + \delta) and I_2 = I_o \cos(45 - \delta)$ \\
-The motor current is therefore: \\
-$I_m = I_1 - I_2 = I_o \cos(45 + \delta) - I_o \cos(45 - \delta)$ \\
-We can express the two currents as follows: \\
-$I_1 = I_o \cos (45) - I_o \delta \sin (45) and I_2 = I_o \cos (45) + I_o \delta sin (45)$ \\
-The motor current is then\\
+Assim o atuador mecânico (motor) recebe o diferencial da corrente fornecida, estando assim sempre orientado a fonte de luz. A corrente no motor é dada pela expressão \; $I_m = I_1 - I_2 = 2 I_o \; \delta \; \sin (45^o) = \sqrt{2} \; I_o \; \delta \; se \; \delta \; é \; em \; radianos$. \cite{book_2} \\
 \\
-$I_m = I_1 - I_2 = 2 I_o \quad \delta \sin (45) = \sqrt{2} I_o \delta \quad if \quad \delta \quad is \quad in \quad radians$ \\
-A small pole-mounted panel can use one single-axis or dual-axis sun tracker. A large array, on the other hand, is divided into small modules, each mounted on its own sun tracker. This simplifies the structure and eliminates the problems related to a large movement in a large panel.
-
-
-
+No Projeto usado não vai ser utilizado este método mas um análogo utilizando dois sensores LDR também em serie e a $45^o$ um do outro dando uma saída proporcional ao desfasamento da fonte de luz e utilizado apenas para ajuste fino, já que o posicionamento vai ser sincronizado pelo RTC (relógio), já existe algoritmos criados usando os parâmetros de localização e tempo que nos fornece os dados do local exato da posição do sol, sendo desnecessário a utilização de sensores, aqui este projeto é flexível pois ja entrega um relógio RTC (Real time clock) com calendário de atualização automática.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-
-The battery stores energy in an electrochemical form and is the most widely used device for energy storage in a variety of applications. The electrochemical energy is in a semiordered form, which is in between the electrical and thermal forms. It has a one-way conversion efficiency of 85 to 90\%.
-There are two basic types of electrochemical batteries:
-The primary battery, which converts chemical energy into electric energy.\\
-The electrochemical reaction in a primary battery is nonreversible, and the battery is discarded after a full discharge. For this reason, it finds applica- tions where a high energy density for one-time use is required.
-The secondary battery, which is also known as the rechargeable battery.
-The electrochemical reaction in the secondary battery is reversible. After a discharge, it can be recharged by injecting a direct current from an external source. This type of battery converts chemical energy into electric energyin the discharge mode. In the charge mode, it converts the electric energy into chemical energy. In both modes, a small fraction of energy is converted into heat, which is dissipated to the surrounding medium. The round-trip conversion efficiency is between 70 and 80\%.
-
-The internal construction of a typical electrochemical cell is shown in Figure 10.1. It has positive and negative electrode plates with insulating separators and a chemical electrolyte in between. The two groups of electrode plates are connected to two external terminals mounted on the casing. The cell stores electrochemical energy at a low electrical potential, typically a few volts. The cell capacity, denoted by C , is measured in ampere-hours (Ah), meaning it can deliver C A for one hour or C / n A for n hours.
-The battery is made of numerous electrochemical cells connected in a series–par-allel combination to obtain the desired battery voltage and current. The higher the battery voltage, the higher the number of cells required in series. The battery rating is stated in terms of the average voltage during discharge and the ampere-hour capacity it can deliver before the voltage drops below the specified limit. The product of the voltage and ampere-hour forms the watthour (Wh) energy rating the battery
-can deliver to a load from the fully charged condition. The battery charge and discharge rates are stated in units of its capacity in Ah. For example, charging a 100-Ah battery at C
-/10 rate means charging at 100/10 = 10 A. Discharging that
-battery at C /2 rate means drawing 100/2 = 50 A, at which rate the battery will be fully discharged in 2 h. The state of charge ( SOC ) of the battery at any time is defined as the following:
-FIGURE 10.1
-Electrochemical energy storage cell construction.
-$SOC = \frac{Ah capacity remaning in the battery}
-{Rated Ah capacity}$
-
-
-
-
-
-\newpage
-
-
-
-
-\newpage
-
 \begin{minipage}[t]{.60\linewidth}
 	%	\quad List 1:
 	\begin{itemize}
@@ -189,14 +142,77 @@ $SOC = \frac{Ah capacity remaning in the battery}
 \end{minipage}\\
 {\it https://www.ptrobotics.com/} \\
 {\it https://www.futurlec.com/index.shtml} \\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section{Equipamento}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section{Conclusões}
 
 
-
-
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Figuras Bibliografia Index
+\listoffigures
+\cite{*}
+\bibliography{./bibliography/Bibliography}
+%\printindex
+\newpage
+\footnote{Apontamento}
+\end{document}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{comment}
+\textcolor{orange}{O}pportunity (oportunidades)
+\textcolor{purple}{I}nterno
+The battery stores energy in an electrochemical form and is the most widely used device for energy storage in a variety of applications. The electrochemical energy is in a semiordered form, which is in between the electrical and thermal forms. It has a one-way conversion efficiency of 85 to 90\%.
+There are two basic types of electrochemical batteries:
+The primary battery, which converts chemical energy into electric energy.\\
+The electrochemical reaction in a primary battery is nonreversible, and the battery is discarded after a full discharge. For this reason, it finds applica- tions where a high energy density for one-time use is required.
+The secondary battery, which is also known as the rechargeable battery.
+The electrochemical reaction in the secondary battery is reversible. After a discharge, it can be recharged by injecting a direct current from an external source. This type of battery converts chemical energy into electric energyin the discharge mode. In the charge mode, it converts the electric energy into chemical energy. In both modes, a small fraction of energy is converted into heat, which is dissipated to the surrounding medium. The round-trip conversion efficiency is between 70 and 80\%.
+The internal construction of a typical electrochemical cell is shown in Figure 10.1. It has positive and negative electrode plates with insulating separators and a chemical electrolyte in between. The two groups of electrode plates are connected to two external terminals mounted on the casing. The cell stores electrochemical energy at a low electrical potential, typically a few volts. The cell capacity, denoted by C , is measured in ampere-hours (Ah), meaning it can deliver C A for one hour or C / n A for n hours.
+The battery is made of numerous electrochemical cells connected in a series–par-allel combination to obtain the desired battery voltage and current. The higher the battery voltage, the higher the number of cells required in series. The battery rating is stated in terms of the average voltage during discharge and the ampere-hour capacity it can deliver before the voltage drops below the specified limit. The product of the voltage and ampere-hour forms the watthour (Wh) energy rating the battery
+can deliver to a load from the fully charged condition. The battery charge and discharge rates are stated in units of its capacity in Ah. For example, charging a 100-Ah battery at C
+/10 rate means charging at 100/10 = 10 A. Discharging that
+battery at C /2 rate means drawing 100/2 = 50 A, at which rate the battery will be fully discharged in 2 h. The state of charge ( SOC ) of the battery at any time is defined as the following:
+FIGURE 10.1
+Electrochemical energy storage cell construction.
+$SOC = \frac{Ah capacity remaning in the battery}
+{Rated Ah capacity}$
+%\vspace{1cm}
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=.6]{./image/OB/Culture.jpg}\\
+%\caption{Inquérito do tipo de Cultura Organizacional \cite{article_1}}
+%\end{figure}\par
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=.35]{./image/OB/Ogbonna_Harris.jpg}\\
+%\caption{Modelo Ogbonna \& Harris \cite{article_1}}
+%\label{Modelo}
+%\end{figure}\par
+%\vspace{1cm}\\
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=.5]{./image/OB/Leadership.jpg}\\
+%\caption{Inquérito do Estilos de Liderança \cite{article_1}}
+%\end{figure}\par
+%\begin{figure}[ht]
+%\begin{center}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/ECO-P18_600x600-2-275x275.jpg}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/EVO-600x600-275x275.jpg}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/nanop10-275x275.jpg}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/NEXTP18-600x6001-275x275.jpg}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/PRO-600x600-275x275.jpg}
+%\includegraphics[scale=0.5]{./image/ROQ/maquinas/You-600x600-275x275}
+%\end{center}
+%\caption{Produtos Principais}
+%\end{figure}
 %\begin{figure}[H]
 %\centering
 %\includegraphics[scale=0.52]{./image/OB/OB_contributions.jpg}
@@ -225,77 +241,8 @@ $SOC = \frac{Ah capacity remaning in the battery}
 %\includegraphics[scale=0.4]{./image/OB/OC_Dimensions.jpg}
 %\caption{Dimensões da Cultura Organizacional \cite{book_4}}
 %\end{figure}\par
-\newpage
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-%\begin{figure}[ht]
-%\begin{center}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/ECO-P18_600x600-2-275x275.jpg}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/EVO-600x600-275x275.jpg}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/nanop10-275x275.jpg}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/NEXTP18-600x6001-275x275.jpg}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/PRO-600x600-275x275.jpg}
-%\includegraphics[scale=0.5]{./image/ROQ/maquinas/You-600x600-275x275}
-%\end{center}
-%\caption{Produtos Principais}
-%\end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-\section{Equipamento}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{1cm}\\
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=.5]{./image/OB/Leadership.jpg}\\
-%\caption{Inquérito do Estilos de Liderança \cite{article_1}}
-%\end{figure}\par
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-%\vspace{1cm}
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=.6]{./image/OB/Culture.jpg}\\
-%\caption{Inquérito do tipo de Cultura Organizacional \cite{article_1}}
-%\end{figure}\par
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=.35]{./image/OB/Ogbonna_Harris.jpg}\\
-%\caption{Modelo Ogbonna \& Harris \cite{article_1}}
-%\label{Modelo}
-%\end{figure}\par
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-\section{Conclusões}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Figuras Bibliografia Index
-\listoffigures
-\cite{*}
-\bibliography{./bibliography/Bibliography}
-%\printindex
-\newpage
-\footnote{Apontamento}
-\end{document}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{comment}
-\textcolor{orange}{O}pportunity (oportunidades)
-\textcolor{purple}{I}nterno
 \end{comment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%END%%%END%%%END%%%END%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
