--- a/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
+++ b/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
@@ -26,7 +26,7 @@ O objetivo é desenvolver um meio de controlo tendo em mente ser um sistema \tex
 \\
 O projeto é apenas académico e de simulação em escala pequena ou de bancada.
 \\
-\vspace{15cm}\\
+\vspace{18cm}\\
 \textbf{Palavras Chave:} Sensores, Componentes, Motores
 \end{abstract}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -46,7 +46,7 @@ Pelo mapa abaixo, podemos determinar os locais mais aptos para aplicar esta tecn
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.6]{./image/World_Solar_Radiation.jpg}
-	\caption{Solar radiation by region of the world \cite{book_2}}
+	\caption{Radiação solar por região mundial \cite{book_2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
@@ -165,8 +165,12 @@ No Projeto não vai ser usado este método mas um análogo utilizando dois senso
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Conclusões}
-
-
+\qquad O sistema de posicionamento fotovoltaico tem diversas soluções de diferentes Impressas que apostam nas energias renováveis, diferentes métodos na parte mecânica e elétrica, como esta disciplina pertence na área digital, considero importante a manipulação dos {\it datasheets} dos componentes e o código, manipular o hardware unicamente por programação através de uma camada de interface [API] acho de maior importância pois cria uma abstração dos problemas que podemos enfrentar e os resolver seguindo uma metodologia sintática, sendo possível o manipular para fazer o que é requerido e desejado. Através do código podemos alterar, modificar e adaptar qualquer projeto ao mundo exterior usando uma linguagem de nível alto ou médio com facilidade.\\
+\\
+Dai este projeto pode ser atualizado a qualquer altura acrescentando funcionalidades e dispositivos que possam beneficiar sua performance, caso necessário.\\
+\\
+Este projeto esta online no link descrito: \\ {\it \textcolor{green}{https:\/\/github.com\/sergio1020881\/LABSIS20202021\/tree\/main\/Relatorio\_2}},\\
+tudo que é necessário para o desenvolver e executar esta ao dispor, O programa usado foi o {\bf Atmel Studio 7} basta fazer download, compilar e programar o chip [ATmega128], e depois ligar os periféricos respeitando as ligações.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
