--- a/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
+++ b/Relatorio_2/Posicionamento_Painel_Solar/Estado_de_Arte.tex
@@ -169,7 +169,7 @@ No Projeto não vai ser usado este método mas um análogo utilizando dois senso
 \\
 Dai este projeto pode ser atualizado a qualquer altura acrescentando funcionalidades e dispositivos que possam beneficiar sua performance, caso necessário.\\
 \\
-Este projeto esta online no link descrito: \\ {\it \textcolor{green}{https:\/\/github.com\/sergio1020881\/LABSIS20202021\/tree\/main\/Relatorio\_2}},\\
+Este projeto esta online no link descrito: \\ {\it \textcolor{green}{https://github.com/sergio1020881/LABSIS20202021/tree/main/Relatorio\_2}},\\
 tudo que é necessário para o desenvolver e executar esta ao dispor, O programa usado foi o {\bf Atmel Studio 7} basta fazer download, compilar e programar o chip [ATmega128], e depois ligar os periféricos respeitando as ligações.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
