--- a/Relatorio_1/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
+++ b/Relatorio_1/Interligacao_Sensores_Actuadores/Interligacao de Sensores e de Actuadores.tex
@@ -1124,7 +1124,7 @@ Este trabalho esta publicado no github, link abaixo: \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\input{./input/EQUACAO}
+\input{./input/DEFINICAO}
 %Figuras Bibliografia Index
 %\newpage
 %\listoffigures
